--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Hundesuppe</h1>
         <nav>
             <a href="index.html">Startseite</a>
-            <a href="html_uebung.html">HTML-Übung</a>
+            <a href="html_uebung.html">Menü</a>
             <a href="css_uebung.html">CSS-Übung</a>
             <a href="context_selectors.html">Kontext-Selektoren</a>
             <a href="box_types.html">Box-Typen</a>
