--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header id="site-header">
         <h1>Lan Phiens Suppenwelt</h1>
-        <nav>
+        <nav class="lannap">
             <a href="index.html">Startseite</a>
             <a href="nudelblog.html">Nudelblog</a>
+            <div class="Küchenjunge"> <img src="Lans Küchenlogo.jpg">
+            </div> <a href="menü.html">Menü</a>
             <a href="über_uns.html">Über uns</a>
-            <a href="javascript.html">JavaScript</a>
-            <a href="menü.html">Menü</a>
         </nav>
     </header>
 
@@ -109,9 +109,8 @@
                 </p>
             </article>
             <div class="pho">
-                <img src="13-hanoi-nudelsuppe.jpg">
-                <img src="13-hanoi-nudelsuppe.jpg">
-                <img src="13-hanoi-nudelsuppe.jpg">
+                <img src="phobo.jpg">
+
             </div>
     </main>
 
@@ -123,5 +122,7 @@
     </footer>
 
 </body>
+<a aria-label="Zum Seitenanfang scrollen" href="#" id="scroll-top" class="scroll-top-right"
+    style="opacity: 1; display: block;"><i class="fa fa-angle-up" aria-hidden="true" role="img"></i></a>
 
 </html>
