--- a/menü.html
+++ b/menü.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="de">
 
 <head>
@@ -10,6 +10,132 @@
 <body>
     <h1>Menü</h1>
     <p>Hier kannst du unsere Suppen bestellen!</p>
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nudelhaus Bella Pasta</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff8f0;
+        }
+
+        header {
+            background-color: #c0392b;
+            color: white;
+            padding: 1.5rem;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #e74c3c;
+            display: flex;
+            justify-content: center;
+            padding: 0.5rem 0;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            background-image: url('https://images.unsplash.com/photo-1525755662778-989d0524087e');
+            background-size: cover;
+            background-position: center;
+            height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 2.5rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+
+        .content {
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .menu {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .menu-item {
+            background-color: #fceae8;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .menu-item h3 {
+            margin-top: 0;
+            color: #c0392b;
+        }
+
+        footer {
+            background-color: #c0392b;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Nudelhaus Bella Pasta</h1>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#menu">Speisekarte</a>
+        <a href="#contact">Kontakt</a>
+    </nav>
+    <div class="hero">
+        Frische Pasta aus Leidenschaft
+    </div>
+    <div class="content" id="home">
+        <h2>Willkommen bei Bella Pasta!</h2>
+        <p>Genießen Sie unsere hausgemachten Nudelgerichte, frisch und mit viel Liebe zubereitet.</p>
+        <div class="menu" id="menu">
+            <div class="menu-item">
+                <h3>Spaghetti Carbonara</h3>
+                <p>Klassische Carbonara mit knusprigem Pancetta und cremiger Sauce.</p>
+            </div>
+            <div class="menu-item">
+                <h3>Tagliatelle al Pesto</h3>
+                <p>Frische Tagliatelle mit hausgemachtem Basilikum-Pesto.</p>
+            </div>
+            <div class="menu-item">
+                <h3>Lasagne Bolognese</h3>
+                <p>Traditionelle Lasagne mit saftiger Fleischsauce und Käse überbacken.</p>
+            </div>
+        </div>
+    </div>
+    <footer id="contact">
+        <p>Kontaktieren Sie uns: <br>Telefon: 0123 456789<br>Email: info@bellapasta.de</p>
+        <p>&copy; 2025 Bella Pasta. Alle Rechte vorbehalten.</p>
+    </footer>
 </body>
 
 </html>
